<resources>
    <string name="app_name">Mark Note</string>
    <string name="text_add_more">Add&#8230;</string>
    <string name="text_add_to_home_screen">Add shortcut</string>
    <string name="text_about">About</string>
    <string name="text_accept">Accept</string>
    <string name="text_tags">Tags</string>
    <string name="text_add_tags">Add Tags</string>
    <string name="text_add_location">Add location</string>
    <string name="text_clear">Clear</string>
    <string name="text_copy_text">Copy content</string>
    <string name="text_comments">Comments</string>
    <string name="text_copy_link">Copy link</string>
    <string name="text_comment">Comment</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_created_time">Created time</string>
    <string name="text_delete">Delete</string>
    <string name="text_deleted">Deleted</string>
    <string name="text_delete_still">Delete still</string>
    <string name="text_edit">Edit</string>
    <string name="text_find_in_page">Find in page</string>
    <string name="text_font">Font</string>
    <string name="text_next">Next</string>
    <string name="text_last">Last</string>
    <string name="text_give_up">Give up</string>
    <string name="text_last_modified_time">Last updated time</string>
    <string name="text_last_sync_time">Last sync time</string>
    <string name="text_chars_number">Total chars</string>
    <string name="text_more">More</string>
    <string name="text_pick">Pick</string>
    <string name="text_preview">Preview</string>
    <string name="text_print_pdf">Print PDF</string>
    <string name="text_reset">Rest</string>
    <string name="text_send">Send</string>
    <string name="text_settings">Settings</string>
    <string name="text_share">Share</string>
    <string name="text_share_image">Share image</string>
    <string name="text_share_text">Share text</string>
    <string name="text_share_html">Share html</string>
    <string name="text_search">Search</string>
    <string name="text_save_or_discard">Save or discard modification?</string>
    <string name="text_save_successfully">Saved successfully</string>
    <string name="text_error_when_save">Error occurred when save data.</string>
    <string name="text_file_saved_to">File is saved to %s</string>
    <string name="text_save">Save</string>
    <string name="text_statistic">Statistics</string>
    <string name="text_save_and_retry_to_add_shortcut">The project hasn\'t been saved, unable to add shortcut. Please try again after saved.</string>
    <string name="text_save_and_retry">Save and retry</string>
    <string name="text_tips">Tips</string>
    <string name="text_warning">Warning</string>
    <string name="text_location_info">Location</string>
    <string name="text_no_location_info">Location not found</string>
    <string name="text_show_location">Show location</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="trying_to_get_location">Trying to get location&#8230;</string>
    <string name="content_was_copied_to_clipboard">Content has been saved to clipboard</string>
    <string name="share_message_chooser">Select share mode</string>
    <string name="cannot_get_link_of_not_synced_item">Unable to get link of un-synchronized project</string>
    <string name="title_required">Title required</string>
    <string name="successfully_add_shortcut">Successfully add shortcut</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_back">Back</string>
    <string name="text_color">Color</string>
    <string name="text_portrait">Portrait</string>
    <string name="set_successfully">Set successfully</string>
    <string name="items">Items</string>
    <string name="text_other_ways">Other ways</string>
    <string name="text_trash">Trash</string>
    <string name="text_archived">Archive</string>
    <string name="text_move_out">Move out</string>
    <string name="text_tab_again_exit">Again to exit</string>
    <string name="text_attachment">Attachment</string>
    <string name="working">Working&#8230;</string>
    <string name="text_input_password_and_continue">Input password</string>
    <string name="text_ok">OK</string>
    <string name="text_export_html">Export html</string>
    <string name="text_failed_to_load_data">Failed to load data.</string>
    <string name="text_failed_to_modify_data">Failed to modify data.</string>
    <string name="text_pick_from_album">Pick from album</string>
    <string name="check_network_availability">Check network availability</string>
    <string name="need_to_complete">Need to complete</string>
    <string name="dialog_notice_content_part1">Hello, user!<![CDATA[<br/><br/>]]>Due to the limit of time, MarkNote still has few weakness. Here we invite you to improve it with us:</string>
    <string name="dialog_notice_content_part2">1.If you like MarkNote you may associate developer by translating it in to other languages(Find in <![CDATA[<b>\"Settings->About->Translation\"</b>]]>), or give rating and feedback in application market.</string>
    <string name="dialog_notice_content_part3">2.If you have special requirements, or if you are unsatisfied about current functions, feed back to developer by any of below ways: <![CDATA[<b>Google+ community, Twitter, Weibo or directly sending an email</b>]]>.</string>
    <string name="dialog_notice_content_part4">3.If you find bugs or crashes in MarkNote, you can feed back in <![CDATA[<b>"Settings->Feedback"</b>]]> or <![CDATA[<b>directly sending an email to developer</b>]]>.</string>
    <string name="dialog_notice_content_part5">4.MarkNote will continue to push out many new functions and features, if you like this application, you may support developing in <![CDATA[<b>"Settings->Support developing"</b>]]>.</string>
    <string name="dialog_notice_content_part6">5.Furthermore, you can also get latest developing messages by subscribe our <![CDATA[<b>Google+ community, Twitter or Weibo</b>]]>. You may even join the beta test.</string>
    <string name="dialog_notice_content_part7">Please give more patience to MarkNote, we will work better.<![CDATA[<br/><br/>]]>Last, wish you have a happy journey with MarkNote!</string>
    <string name="intro_1_title">Welcome to %s</string>
    <string name="intro_1_description">Thanks for using %s\nthe markdown support application\nfor productivity\n and leisure note-taking</string>
    <string name="intro_2_title">Markdown</string>
    <string name="intro_2_description">Markdown grammar support\nshare and export note\nas pictures and PDF files</string>
    <string name="intro_3_title">Export</string>
    <string name="intro_3_description">Multiple file formats\nto export</string>
    <string name="intro_4_title">Colorful</string>
    <string name="intro_4_description">Light and dark\n13 kinds of primary color\n16 kinds of accent color</string>
    <string name="intro_5_title">Attachment</string>
    <string name="intro_5_description">Multiple kinds of attachments\nsketch, picture, photo, video\naudio, file, location</string>
    <string name="intro_6_title">Enjoy</string>
    <string name="intro_6_description">Don\'t forget to subscribe\nour community!</string>
    <string name="empty_list_to_capture">Empty list to capture</string>
    <string name="capture_list">Capture</string>
    <string name="capturing">Capturing&#8230;</string>
    <string name="include_tags">Include tags</string>
    <string name="include_archived">Archived</string>
    <string name="include_trashed">Trashed</string>
    <string name="search_by_conditions">Search &#8230;</string>
    <string name="no_search_result_found">Result not found</string>
    <string name="try_other_conditions">try another condition and search again</string>
    <string name="drawer_menu_notes">Notes</string>
    <string name="drawer_menu_minds">Snagging</string>
    <string name="drawer_menu_tags">Tags</string>
    <string name="drawer_menu_notices">Notices</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_trash">Trash</string>
    <string name="drawer_menu_archive">Archived</string>
    <string name="drawer_menu_sync">Sync</string>
    <string name="fab_opt_note">Note</string>
    <string name="fab_opt_notebook">Notebook</string>
    <string name="fab_opt_tags">Tags</string>
    <string name="fab_opt_capture">Capture</string>
    <string name="fab_opt_file">File</string>
    <string name="fab_opt_draft">Sketch</string>
    <string name="fab_opt_link">Link</string>
    <string name="fab_opt_record">Record</string>
    <string name="fab_opt_notice">Alarm</string>
    <string name="fab_quick_note">Quick note</string>
    <string name="fab_sort_custom_fab">Custom fabs</string>
    <string name="fab_sort_custom">Custom&#8230;</string>
    <string name="fab_sort_custom_fab_tip">Drag the rear icon to sort, the top 5 ones will be showed in dashboard.</string>
    <string name="fab_sort_save">Save</string>
    <string name="fab_sort_save_or_lose">Save or discard your modifications</string>
    <string name="fab_sort_save_successfully">Successfully saved</string>
    <string name="note_default_name">Untitled Note</string>
    <string name="content_failed_to_parse_intent">Failed to parse the intent</string>
    <string name="note_failed_to_read_file">Failed to read file</string>
    <string name="note_failed_to_get_note_content">Failed to read content</string>
    <string name="text_no_such_note">Note not found</string>
    <string name="note_note_title">Note title</string>
    <string name="note_write_down_what_you_want">Write down your note&#8230;</string>
    <string name="note_default_notebook">Default notebook</string>
    <string name="edit_notebook">Edit notebook</string>
    <string name="notebook_name">Notebook name</string>
    <string name="pick_notebook_color">Select the color of notebook</string>
    <string name="note_capture_note">Capture note</string>
    <string name="all_notes">All notes</string>
    <string name="text_replace_tab_with_4_spaces">Use 4 spaces replaces Tab</string>
    <string name="notes_list_empty">Empty notes list</string>
    <string name="notes_list_empty_sub_normal">add note by clicking + in dashboard</string>
    <string name="notes_list_empty_sub_archived">no archived note found</string>
    <string name="notes_list_empty_sub_trashed">no trashed note found</string>
    <string name="move_to_another_notebook">Move</string>
    <string name="moved_successfully">Successfully moved</string>
    <string name="msg_when_delete_notebook">Delete the notebook will delete its child-notebooks and child-notes as well.</string>
    <string name="pick_notebook">Pick notebook</string>
    <string name="add_attachment">Attach</string>
    <string name="album">Album</string>
    <string name="net_image_link">Image link</string>
    <string name="file">File</string>
    <string name="create">Create</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="sound_record">Sound record</string>
    <string name="take_video">Take video</string>
    <string name="sketch">Sketch</string>
    <string name="email_to_find_you">Email to contact you</string>
    <string name="details">Details</string>
    <string name="feedback_types">Feedback type</string>
    <string name="statistic_activities">Activities during recent 7 days</string>
    <string name="statistic_title_activities">Notes and snagging added during recent 7 days</string>
    <string name="statistic_models_added">Models added</string>
    <string name="statistic_title_models_added">Statistics of added models</string>
    <string name="statistic_attachments_added">Attachments added</string>
    <string name="statistic_title_attachments_added">Statistics of added attachments</string>
</resources>