<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <me.shouheng.commons.widget.theme.SupportCardView
                style="@style/ProfileCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.shouheng.commons.widget.theme.CardTitleView
                        app:card_icon="@drawable/ic_description_black_24dp"
                        app:card_title="@string/statistic_activities"
                        app:card_sub_title="@string/statistic_title_activities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <me.shouheng.commons.widget.theme.Divider
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <lecho.lib.hellocharts.view.LineChartView
                        android:id="@+id/lcv_note"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </LinearLayout>

            </me.shouheng.commons.widget.theme.SupportCardView>

            <me.shouheng.commons.widget.theme.SupportCardView
                style="@style/ProfileCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.shouheng.commons.widget.theme.CardTitleView
                        app:card_icon="@drawable/ic_equalizer_grey_24dp"
                        app:card_title="@string/statistic_models_added"
                        app:card_sub_title="@string/statistic_title_models_added"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <me.shouheng.commons.widget.theme.Divider
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <lecho.lib.hellocharts.view.ColumnChartView
                        android:id="@+id/ccv_models"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </LinearLayout>

            </me.shouheng.commons.widget.theme.SupportCardView>

            <me.shouheng.commons.widget.theme.SupportCardView
                style="@style/ProfileCardStyle"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.shouheng.commons.widget.theme.CardTitleView
                        app:card_icon="@drawable/ic_attach_file_grey"
                        app:card_title="@string/statistic_attachments_added"
                        app:card_sub_title="@string/statistic_title_attachments_added"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <me.shouheng.commons.widget.theme.Divider
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <lecho.lib.hellocharts.view.ColumnChartView
                        android:id="@+id/ccv_attachment"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </LinearLayout>

            </me.shouheng.commons.widget.theme.SupportCardView>

        </LinearLayout>

    </ScrollView>

</layout>