<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:hint="@string/email_to_find_you"
            android:singleLine="true"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_address_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/feedback_types"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_feedback_types"
            android:entries="@array/feedback_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details"
            android:maxLength="@integer/feedback_details_length" />

    </android.support.design.widget.TextInputLayout>

    <me.shouheng.commons.widget.WatcherTextView
        android:id="@+id/wt_question"
        app:max_length="@integer/feedback_details_length"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>