<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:text="@string/dialog_notice_content_part1" />

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/dialog_notice_content_part2" />

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/dialog_notice_content_part3" />

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_google_play"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_action_google_play"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_github"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_action_github"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_gmail"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_action_gmail"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/dialog_notice_content_part4" />

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/dialog_notice_content_part5" />

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_qq"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/umeng_socialize_qq_on"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_twitter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_action_twitter"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <me.shouheng.commons.widget.theme.SupportImageView
                    android:id="@+id/siv_weibo"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ssdk_oks_classic_sinaweibo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <me.shouheng.commons.widget.theme.SupportTextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/dialog_notice_content_part6" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_alipay"
                android:background="@color/common_alipay_bg"
                android:text="@string/donate_by_alipay"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_wechat"
                android:text="@string/donate_by_wechat"
                android:textColor="@android:color/white"
                android:background="@color/green"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</layout>